logs/logs_login/excepcion_login_2023-07-11_04-11-27.log
2023-07-11 04:11:27,281 - Thread-1 (process_request_thread) - MainProcess - ERROR - Ocurrio una excepcion:Unclosed tag on line 52: 'if'. Looking for one of: elif, else, endif.
Traceback (most recent call last):
  File "C:\Users\nblad\Desktop\Nueva carpeta (2)\ISI_2023_I_P_CLINICAMR_FRONT_DEPLOY\CLINICA\views_api\views_login.py", line 22, in iniciar_sesion
    return render(request, 'inicio.html', {'mensaje': mensaje, 'permisos':cargar_datos()})
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\nblad\Desktop\Nueva carpeta (2)\ISI_2023_I_P_CLINICAMR_FRONT_DEPLOY\venv\Lib\site-packages\django\shortcuts.py", line 24, in render
    content = loader.render_to_string(template_name, context, request, using=using)
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\nblad\Desktop\Nueva carpeta (2)\ISI_2023_I_P_CLINICAMR_FRONT_DEPLOY\venv\Lib\site-packages\django\template\loader.py", line 62, in render_to_string
    return template.render(context, request)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\nblad\Desktop\Nueva carpeta (2)\ISI_2023_I_P_CLINICAMR_FRONT_DEPLOY\venv\Lib\site-packages\django\template\backends\django.py", line 61, in render
    return self.template.render(context)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\nblad\Desktop\Nueva carpeta (2)\ISI_2023_I_P_CLINICAMR_FRONT_DEPLOY\venv\Lib\site-packages\django\template\base.py", line 175, in render
    return self._render(context)
           ^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\nblad\Desktop\Nueva carpeta (2)\ISI_2023_I_P_CLINICAMR_FRONT_DEPLOY\venv\Lib\site-packages\django\template\base.py", line 167, in _render
    return self.nodelist.render(context)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\nblad\Desktop\Nueva carpeta (2)\ISI_2023_I_P_CLINICAMR_FRONT_DEPLOY\venv\Lib\site-packages\django\template\base.py", line 1005, in render
    return SafeString("".join([node.render_annotated(context) for node in self]))
                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\nblad\Desktop\Nueva carpeta (2)\ISI_2023_I_P_CLINICAMR_FRONT_DEPLOY\venv\Lib\site-packages\django\template\base.py", line 1005, in <listcomp>
    return SafeString("".join([node.render_annotated(context) for node in self]))
                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\nblad\Desktop\Nueva carpeta (2)\ISI_2023_I_P_CLINICAMR_FRONT_DEPLOY\venv\Lib\site-packages\django\template\base.py", line 966, in render_annotated
    return self.render(context)
           ^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\nblad\Desktop\Nueva carpeta (2)\ISI_2023_I_P_CLINICAMR_FRONT_DEPLOY\venv\Lib\site-packages\django\template\loader_tags.py", line 132, in render
    compiled_parent = self.get_parent(context)
                      ^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\nblad\Desktop\Nueva carpeta (2)\ISI_2023_I_P_CLINICAMR_FRONT_DEPLOY\venv\Lib\site-packages\django\template\loader_tags.py", line 129, in get_parent
    return self.find_template(parent, context)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\nblad\Desktop\Nueva carpeta (2)\ISI_2023_I_P_CLINICAMR_FRONT_DEPLOY\venv\Lib\site-packages\django\template\loader_tags.py", line 107, in find_template
    template, origin = context.template.engine.find_template(
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\nblad\Desktop\Nueva carpeta (2)\ISI_2023_I_P_CLINICAMR_FRONT_DEPLOY\venv\Lib\site-packages\django\template\engine.py", line 157, in find_template
    template = loader.get_template(name, skip=skip)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\nblad\Desktop\Nueva carpeta (2)\ISI_2023_I_P_CLINICAMR_FRONT_DEPLOY\venv\Lib\site-packages\django\template\loaders\cached.py", line 57, in get_template
    template = super().get_template(template_name, skip)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\nblad\Desktop\Nueva carpeta (2)\ISI_2023_I_P_CLINICAMR_FRONT_DEPLOY\venv\Lib\site-packages\django\template\loaders\base.py", line 28, in get_template
    return Template(
           ^^^^^^^^^
  File "C:\Users\nblad\Desktop\Nueva carpeta (2)\ISI_2023_I_P_CLINICAMR_FRONT_DEPLOY\venv\Lib\site-packages\django\template\base.py", line 154, in __init__
    self.nodelist = self.compile_nodelist()
                    ^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\nblad\Desktop\Nueva carpeta (2)\ISI_2023_I_P_CLINICAMR_FRONT_DEPLOY\venv\Lib\site-packages\django\template\base.py", line 200, in compile_nodelist
    return parser.parse()
           ^^^^^^^^^^^^^^
  File "C:\Users\nblad\Desktop\Nueva carpeta (2)\ISI_2023_I_P_CLINICAMR_FRONT_DEPLOY\venv\Lib\site-packages\django\template\base.py", line 513, in parse
    raise self.error(token, e)
  File "C:\Users\nblad\Desktop\Nueva carpeta (2)\ISI_2023_I_P_CLINICAMR_FRONT_DEPLOY\venv\Lib\site-packages\django\template\base.py", line 511, in parse
    compiled_result = compile_func(self, token)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\nblad\Desktop\Nueva carpeta (2)\ISI_2023_I_P_CLINICAMR_FRONT_DEPLOY\venv\Lib\site-packages\django\template\defaulttags.py", line 953, in do_if
    nodelist = parser.parse(("elif", "else", "endif"))
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\nblad\Desktop\Nueva carpeta (2)\ISI_2023_I_P_CLINICAMR_FRONT_DEPLOY\venv\Lib\site-packages\django\template\base.py", line 513, in parse
    raise self.error(token, e)
  File "C:\Users\nblad\Desktop\Nueva carpeta (2)\ISI_2023_I_P_CLINICAMR_FRONT_DEPLOY\venv\Lib\site-packages\django\template\base.py", line 511, in parse
    compiled_result = compile_func(self, token)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\nblad\Desktop\Nueva carpeta (2)\ISI_2023_I_P_CLINICAMR_FRONT_DEPLOY\venv\Lib\site-packages\django\template\defaulttags.py", line 953, in do_if
    nodelist = parser.parse(("elif", "else", "endif"))
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\nblad\Desktop\Nueva carpeta (2)\ISI_2023_I_P_CLINICAMR_FRONT_DEPLOY\venv\Lib\site-packages\django\template\base.py", line 518, in parse
    self.unclosed_block_tag(parse_until)
  File "C:\Users\nblad\Desktop\Nueva carpeta (2)\ISI_2023_I_P_CLINICAMR_FRONT_DEPLOY\venv\Lib\site-packages\django\template\base.py", line 581, in unclosed_block_tag
    raise self.error(token, msg)
django.template.exceptions.TemplateSyntaxError: Unclosed tag on line 52: 'if'. Looking for one of: elif, else, endif.
